Fix important requirement to overlap mui styles

--- a/src/components/Layout/components/NavBar/Navbar.module.css
+++ b/src/components/Layout/components/NavBar/Navbar.module.css
@@ -3,12 +3,12 @@
 }
 
 .mobileNavBar {
-  display: none;
+  display: none !important;
 }
 
 @media screen and (max-width: 900px) {
   .desktopNavBar {
-    display: none;
+    display: none !important;
   }
   .mobileNavBar {
     display: flex;
